# lastfm

./: .gitignore  ALOVOA_ANALYSIS.md  DUOLICIOUS_ANALYSIS.md  DUOLICIOUS_ROUTE_PROTECTION.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  README.md  SECURITY.md
.github/workflows/: mcpscan.yml  testandosom.yml
backend/: .env.example  Cargo.toml  README.md
backend/migrations/: 001_initial_schema.sql  002_security_enhancements.sql  003_chat_enhancements.sql  004_achievements.sql  005_events.sql  006_push_subscriptions.sql
backend/src/: config.rs  errors.rs  lib.rs  main.rs  state.rs
backend/src/middleware/: auth.rs  mod.rs  rate_limit.rs
backend/src/models/: like.rs  match_model.rs  message.rs  mod.rs  photo.rs  scrobble.rs  user.rs
backend/src/routes/: achievements.rs  auth.rs  captcha.rs  discover.rs  events.rs  lastfm.rs  matches.rs  mod.rs  notifications.rs  photos.rs  users.rs  websocket.rs
backend/src/services/: achievement_service.rs  auth_service.rs  cache_service.rs  captcha_service.rs  compatibility_service.rs  email_normalization.rs  event_service.rs  lastfm_service.rs  match_service.rs  mod.rs  notification_service.rs  photo_service.rs  websocket_service.rs
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  main.tsx  router.tsx
frontend/src/api/: auth.ts  client.ts  lastfm.ts  matches.ts  users.ts
frontend/src/components/discover/: DislikeButton.tsx  LikeButton.tsx  SwipeCard.tsx
frontend/src/components/layout/: BottomNav.tsx  Navbar.tsx
frontend/src/components/ui/: Avatar.tsx  Button.tsx  Card.tsx  Input.tsx
frontend/src/hooks/: useAuth.ts  useLastFm.ts  useMatches.ts
frontend/src/pages/: Chat.tsx  Discover.tsx  Home.tsx  Login.tsx  Matches.tsx  Profile.tsx  Register.tsx  Settings.tsx
frontend/src/stores/: authStore.ts  userStore.ts
frontend/src/styles/: globals.css
frontend/src/types/: lastfm.ts  match.ts  user.ts
scripts/: setup.sh  start.sh  stop.sh
