[package]
name = "lastfm-dating-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "mysql", "uuid", "chrono"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Password hashing
argon2 = "0.5"

# JWT
jsonwebtoken = "9"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for Last.fm API
reqwest = { version = "0.11", features = ["json"] }

# Environment variables
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# AWS S3 (for photo uploads)
aws-sdk-s3 = "1.0"
aws-config = "1.0"

# CAPTCHA generation (simple text-based alternative)
rand = "0.8"

# Redis (for rate limiting and caching)
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Web Push Notifications
web-push = "0.9"
base64 = "0.21"

# AWS credentials
aws-credential-types = "1.0"

[dev-dependencies]
